--- a/arrow.html
+++ b/arrow.html
@@ -27,7 +27,7 @@ body {
 h4 {
     font-size: 16px;
     margin: 12px 0 -12px 12px;
-    color: #2B66CB;
+    color: #930;
 }
 .codeBlok {
     display: block;
