--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>Arrow site</h1>
-    <p>Show the <a href="arrow.html">arrow-page</a></p>   
+    <p>Show the <a href="arrow.html">arrow-page</a></p>  
+    <footer>version 1.0 - 17-09-20201</footer>
 </body>
 </html>
