--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>Arrow site</h1>
     <p>Show the <a href="arrow.html">arrow-page</a></p>  
-    <footer>version 1.0 - 17-09-20201</footer>
+        <p>Mail naar <a href="contact.html">
+            contact me!</a> voor info</p>
+            <footer>version 1.0 - 17-09-20201</footer>
 </body>
 </html>
